i fixed  the layout issue after the hint is shown

--- a/src/style.css
+++ b/src/style.css
@@ -54,21 +54,30 @@ body {
 
 #hint-container {
     display: flex;
+    flex-direction: column;
     align-items: center;
     color: #a10000;
 }
 
 #hint-container label {
-    margin-right: 10px;
+    margin-bottom: 10px;
 }
 
 #hint {
     display: none;
+    font-size: 13px;
 }
 
 #hint-box:checked ~ #hint {
     display: block;
+    text-align: center;
 }
+
+#hint-box{
+    margin-right: 20px;
+    cursor: pointer;
+}
+
 
 textarea {
     width: calc(50% - 15px);
